# AIpex_fw

./: .gitignore  CMakeLists.txt  ComputeService.proto  README.md  app_comm.proto  camera_client_grpc_hud.py  configure.json  data_types.proto  grpc_cpp_plugin  start-server.service  wakeup.proto  wakeup.py  wakeup_pb2.py  wakeup_pb2.pyi  wakeup_pb2_grpc.py
includes/: app_comm_service_impl.h  config.h  greeter.h  grpc_client.h  grpc_server.h  hailo.h  hailo_infer.h  hailo_manager.h  hailo_toolbox.h  hailo_utils.h  init.h  opencv.h  power_control.h  service.h  service_impl.h
src/: app_comm_service_impl.cpp  config.cpp  greeter.cpp  grpc_client.cpp  grpc_server.cpp  hailo.cpp  hailo_infer.cpp  hailo_lowlight_enhance.cpp  hailo_manager.cpp  hailo_object_detection.cpp  hailo_toolbox.cpp  hailo_utils.cpp  init.cpp  main.cpp  opencv.cpp  power_control.cpp  service_impl.cpp
